[gd_scene load_steps=13 format=2]

[ext_resource path="res://YetiScenes/YetiSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Yeti.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 16 )

[sub_resource type="Animation" id=3]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../JumpSkin/IdleSkin:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0.95, 1.05 ), Vector2( 1.05, 0.95 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Damage"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../JumpSkin/IdleSkin/DamageSkin:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, -2, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.6, 1.4 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../JumpSkin/IdleSkin/DamageSkin:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, -2, -2 ),
"update": 0,
"values": [ 0.0, -10.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Angle"
tracks/0/type = "value"
tracks/0/path = NodePath("../JumpSkin/IdleSkin/DamageSkin/AngleSkin/TricksFix/Tricks:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 1 ),
"transitions": PoolRealArray( 1, -2, 1, 0.5 ),
"update": 0,
"values": [ 0.0, -60.0, -60.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../JumpSkin/IdleSkin/DamageSkin/AngleSkin/TricksFix/Tricks:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.6, 1 ),
"transitions": PoolRealArray( 1, -2, 1, -2, -2, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.7, 1.3 ), Vector2( 0.7, 1.3 ), Vector2( 0.9, 1.1 ), Vector2( 0.7, 1.3 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "trick_complete"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "Back"
tracks/0/type = "value"
tracks/0/path = NodePath("../JumpSkin/IdleSkin/DamageSkin/AngleSkin/TricksFix/Tricks:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, -2, -2, 0.5 ),
"update": 0,
"values": [ 0.0, -5.0, 15.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../JumpSkin/IdleSkin/DamageSkin/AngleSkin/TricksFix/Tricks:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, -2, -2, -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.4, 0.6 ), Vector2( -0.9, 1.1 ), Vector2( -0.9, 1.1 ), Vector2( 1.2, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "trick_complete"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "Rotate"
tracks/0/type = "value"
tracks/0/path = NodePath("../JumpSkin/IdleSkin/DamageSkin/AngleSkin/TricksFix/Tricks:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.8, 1 ),
"transitions": PoolRealArray( 1, -2, 1, 0.5 ),
"update": 0,
"values": [ 0.0, -10.0, 370.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../JumpSkin/IdleSkin/DamageSkin/AngleSkin/TricksFix/Tricks:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 1 ),
"transitions": PoolRealArray( 1, -2, -2, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 0.7 ), Vector2( 0.8, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "trick_complete"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "Turn"
tracks/0/type = "value"
tracks/0/path = NodePath("../JumpSkin/IdleSkin/DamageSkin/AngleSkin/TricksFix/Tricks:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 1 ),
"transitions": PoolRealArray( 1, -2, -2, -2, 0.5 ),
"update": 0,
"values": [ 0.0, -20.0, 45.0, -30.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../JumpSkin/IdleSkin/DamageSkin/AngleSkin/TricksFix/Tricks:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, -2, 1, -2, -2, -2, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.4, 1 ), Vector2( 1, 1 ), Vector2( 0.2, 1 ), Vector2( 1, 1 ), Vector2( 0.4, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "trick_complete"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "Upside"
tracks/0/type = "value"
tracks/0/path = NodePath("../JumpSkin/IdleSkin/DamageSkin/AngleSkin/TricksFix/Tricks:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 1 ),
"transitions": PoolRealArray( 1, -2, 0.5, 0.5, 0.5 ),
"update": 0,
"values": [ 0.0, 45.0, 45.0, -15.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../JumpSkin/IdleSkin/DamageSkin/AngleSkin/TricksFix/Tricks:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, -2, -2, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, -1 ), Vector2( 1.2, -0.8 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "trick_complete"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "Push"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../JumpSkin/IdleSkin/DamageSkin/AngleSkin/TricksFix:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, -2, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[node name="Yeti" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="JumpSkin" type="Node2D" parent="."]

[node name="IdleSkin" type="Node2D" parent="JumpSkin"]
scale = Vector2( 0.95, 1.05 )

[node name="DamageSkin" type="Node2D" parent="JumpSkin/IdleSkin"]

[node name="AngleSkin" type="Node2D" parent="JumpSkin/IdleSkin/DamageSkin"]

[node name="TricksFix" type="Node2D" parent="JumpSkin/IdleSkin/DamageSkin/AngleSkin"]
position = Vector2( 0, -14 )

[node name="Tricks" type="Node2D" parent="JumpSkin/IdleSkin/DamageSkin/AngleSkin/TricksFix"]

[node name="YetiSprite" parent="JumpSkin/IdleSkin/DamageSkin/AngleSkin/TricksFix/Tricks" instance=ExtResource( 1 )]
position = Vector2( 0, -2 )
frame = 1

[node name="BetweenYetiSprite" parent="JumpSkin/IdleSkin/DamageSkin/AngleSkin/TricksFix/Tricks" instance=ExtResource( 1 )]
visible = false
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 0, -2 )
playing = false

[node name="DamageArea" type="Area2D" parent="JumpSkin/IdleSkin/DamageSkin/AngleSkin/TricksFix/Tricks"]
position = Vector2( 0, 11.0476 )
scale = Vector2( 0.95, 1.05 )
collision_layer = 0
collision_mask = 2

[node name="DamageCollision" type="CollisionShape2D" parent="JumpSkin/IdleSkin/DamageSkin/AngleSkin/TricksFix/Tricks/DamageArea"]
shape = SubResource( 1 )

[node name="GroundCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, -16 )
shape = SubResource( 2 )

[node name="Players" type="Node2D" parent="."]

[node name="IdlePlayer" type="AnimationPlayer" parent="Players"]
autoplay = "Idle"
anims/Idle = SubResource( 3 )

[node name="DamagePlayer" type="AnimationPlayer" parent="Players"]
anims/Damage = SubResource( 4 )

[node name="TrickPlayer" type="AnimationPlayer" parent="Players"]
anims/Angle = SubResource( 5 )
anims/Back = SubResource( 6 )
anims/Rotate = SubResource( 7 )
anims/Turn = SubResource( 8 )
anims/Upside = SubResource( 9 )

[node name="PerformTrickPlayer" type="AnimationPlayer" parent="Players"]
anims/Push = SubResource( 10 )

[node name="Timers" type="Node2D" parent="."]

[node name="TrailTimer" type="Timer" parent="Timers"]
wait_time = 0.1
autostart = true

[node name="BetweenFrameTimer" type="Timer" parent="Timers"]
wait_time = 0.05
one_shot = true

[connection signal="area_entered" from="JumpSkin/IdleSkin/DamageSkin/AngleSkin/TricksFix/Tricks/DamageArea" to="." method="_on_DamageArea_area_entered"]
[connection signal="animation_finished" from="Players/TrickPlayer" to="." method="_on_TrickPlayer_animation_finished"]
[connection signal="timeout" from="Timers/TrailTimer" to="." method="_on_TrailTimer_timeout"]
[connection signal="timeout" from="Timers/BetweenFrameTimer" to="." method="_on_BetweenFrameTimer_timeout"]
